--- a/loon/build.gradle
+++ b/loon/build.gradle
@@ -8,8 +8,12 @@ android {
     compileSdk 33
 
     defaultConfig {
-        minSdk 24
+        minSdk 21
         targetSdk 33
+
+        aarMetadata {
+            minCompileSdk = 21
+        }
 
         consumerProguardFiles "consumer-rules.pro"
     }
